--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,7 @@
 /* ============================================================
 
 Wirefy by Chris Da Sie
-Version: 1.2
+Version: 1.3
 URL: https://github.com/cjdsie/wirefy
 Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 
@@ -9,15 +9,61 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 /* Table of Content
 ==================================================
 	#Site Styles
+	 #Documentation
 	#Page Styles
 	#Media Queries
 	*/
+	
 
 /* #Site Styles
 ================================================== */
 
+.container {
+	margin:0 auto;
+	padding:0 auto;
+	max-width: 1200px;
+	width: 80%;
+	padding-top: 20px; }
+		
+		.content {
+			position:relative;
+			width:100%;
+			overflow:hidden;
+		}
+
 /* #Page Styles
 ================================================== */
+
+/* Header 
+--------------------------------------------------*/
+
+.logo {
+	float:left;
+	width:auto;
+	margin: 0 4.2875% 0 0;
+}
+
+nav {
+	float:right;
+}
+
+nav select {
+	display:block;
+}
+
+nav ul {
+	display:none;
+	margin:0;
+	padding:0;
+	list-style:none;
+}
+
+nav ul li {
+	float:left;
+	margin: 0 0 0 3em;
+}
+
+
 
 /* #Media Queries
 ================================================== */
@@ -29,10 +75,33 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 	
 	@media only screen and (min-width: 40em) {
 	  /* 640 =================================================== */
+		nav select {
+			display:none;
+		}
+		
+		nav ul {
+			display:block;
+		}
+	
 	}
 	
 	@media only screen and (min-width: 45em) {
 	  /* 720 =================================================== */
+	body {
+	    display: table;
+	    border-collapse: collapse;
+	  }
+	  [role="banner"] a[href="#navigation"] {
+	    display: none !important;
+	    visibility: hidden;
+	  }
+	  [role="navigation"] {
+	    display: table-header-group;
+	  }
+	  [role="navigation"] p {
+	    margin: 0 auto;
+	    width: 90%;
+	  }
 	}
 	
 	@media screen and (min-width: 55.5em) {
