--- a/css/docs.css
+++ b/css/docs.css
@@ -124,6 +124,10 @@ body {
 		color: #999; }
 	.hidden-code>div {
 		display: none; }
+		
+		.bsarocks, #bsap_aplink {
+			display:none;
+		}
 
 
 	/* Grid */
@@ -214,6 +218,7 @@ body {
 	background-color: rgba(255, 255, 255, .5);
 	}
 	
+
 	
 	
 	
@@ -229,8 +234,10 @@ body {
 		
 		.sidebar {
 			position: fixed;
-			width: 25%;
-			float:left; }
+			width: 16%;
+			float:left;
+			overflow:hidden }
+			
 			
 			.content {
 				width:75%;
@@ -253,6 +260,19 @@ body {
 			float:right;
 			width: 100%;
 			}
+			
+			/* Ad Block 
+			=================================================== */
+				.bsarocks{display:block;}
+				body .one .bsa_it_ad { background: transparent; border: none; font-family: inherit; width:100%; float:left; padding: 0 15px 0 0px; margin: 0; text-align: left; }
+				body .one .bsa_it_ad:hover img { -moz-box-shadow: 0 0 3px #000; -webkit-box-shadow: 0 0 3px #000; box-shadow: 0 0 3px #000; }
+				body .one .bsa_it_ad .bsa_it_i { display: block; padding: 0; float: none; margin: 0 0 5px; }
+				body .one .bsa_it_ad .bsa_it_i img { padding: 0; border: none; }
+				body .one .bsa_it_ad .bsa_it_t { padding: 6px 0; }
+				body .one .bsa_it_ad .bsa_it_d { padding: 0; font-size: 12px; color: #333; }
+				body .one .bsa_it_p { display: none; }
+				body #bsap_aplink, body #bsap_aplink:hover { display: block; font-size: 10px; margin: 12px 15px 0 0; text-align: left; }
+			
 		
 	}
 	@media only screen and (min-width: 45em) {
