--- a/css/docs.css
+++ b/css/docs.css
@@ -234,7 +234,7 @@ body {
 		
 		.sidebar {
 			position: fixed;
-			width: 16%;
+			width: 25%;
 			float:left;
 			overflow:hidden }
 			
@@ -255,6 +255,7 @@ body {
 		}
 		nav ul {
 			display:block;
+			margin-bottom: 10px;
 		}
 		#logo {
 			float:right;
