--- a/css/docs.css
+++ b/css/docs.css
@@ -265,13 +265,14 @@ body {
 			/* Ad Block 
 			=================================================== */
 				.bsarocks{display:block;}
-				body .bsa_it.one .bsa_it_ad { background: transparent; border: none; font-family: inherit; width:100%; float:left; padding: 0 15px 0 0px; margin: 0; text-align: left; }
-				body .bsa_it.one .bsa_it_ad:hover img { -moz-box-shadow: 0 0 3px #000; -webkit-box-shadow: 0 0 3px #000; box-shadow: 0 0 3px #000; }
-				body .bsa_it.one .bsa_it_ad .bsa_it_i { display: block; padding: 0; float: none; margin: 0 0 5px; }
-				body .bsa_it.one .bsa_it_ad .bsa_it_i img { padding: 0; border: none; }
-				body .bsa_it.one .bsa_it_ad .bsa_it_t { padding: 6px 0; }
-				body .bsa_it.one .bsa_it_ad .bsa_it_d { padding: 0; font-size: 12px; color: #333; }
-				body .bsa_it.one .bsa_it_p { display: none; }
+				
+				body .one .bsa_it_ad { background: transparent; border: none; font-family: inherit; width:100%!important; float:left; padding: 0 15px 0 0px; margin: 0; text-align: left; }
+				body .one .bsa_it_ad:hover img { -moz-box-shadow: 0 0 3px #000; -webkit-box-shadow: 0 0 3px #000; box-shadow: 0 0 3px #000; }
+				body .one .bsa_it_ad .bsa_it_i { display: block; padding: 0; float: none; margin: 0 0 5px; }
+				body .one .bsa_it_ad .bsa_it_i img { padding: 0; border: none; }
+				body .one .bsa_it_ad .bsa_it_t { padding: 6px 0; }
+				body .one .bsa_it_ad .bsa_it_d { padding: 0; font-size: 12px; color: #333; }
+				body .one .bsa_it_p { display: none; }
 				body #bsap_aplink, body #bsap_aplink:hover { display: block; font-size: 10px; margin: 12px 15px 0 0; text-align: left; }
 			
 		
