--- a/css/docs.css
+++ b/css/docs.css
@@ -266,13 +266,13 @@ body {
 			=================================================== */
 				.bsarocks{display:block;}
 				
-				body .one .bsa_it_ad { background: transparent; border: none; font-family: inherit; width:100%!important; float:left; padding: 0 15px 0 0px; margin: 0; text-align: left; }
-				body .one .bsa_it_ad:hover img { -moz-box-shadow: 0 0 3px #000; -webkit-box-shadow: 0 0 3px #000; box-shadow: 0 0 3px #000; }
-				body .one .bsa_it_ad .bsa_it_i { display: block; padding: 0; float: none; margin: 0 0 5px; }
-				body .one .bsa_it_ad .bsa_it_i img { padding: 0; border: none; }
-				body .one .bsa_it_ad .bsa_it_t { padding: 6px 0; }
-				body .one .bsa_it_ad .bsa_it_d { padding: 0; font-size: 12px; color: #333; }
-				body .one .bsa_it_p { display: none; }
+				body .bsarocks .one .bsa_it_ad { background: transparent; border: none; font-family: inherit; width:100%!important; float:left; padding: 0 15px 0 0px; margin: 0; text-align: left; }
+				body .bsarocks .one .bsa_it_ad:hover img { -moz-box-shadow: 0 0 3px #000; -webkit-box-shadow: 0 0 3px #000; box-shadow: 0 0 3px #000; }
+				body .bsarocks .one .bsa_it_ad .bsa_it_i { display: block; padding: 0; float: none; margin: 0 0 5px; }
+				body .bsarocks .one .bsa_it_ad .bsa_it_i img { padding: 0; border: none; }
+				body .bsarocks .one .bsa_it_ad .bsa_it_t { padding: 6px 0; }
+				body .bsarocks .one .bsa_it_ad .bsa_it_d { padding: 0; font-size: 12px; color: #333; }
+				body .bsarocks .one .bsa_it_p { display: none; }
 				body #bsap_aplink, body #bsap_aplink:hover { display: block; font-size: 10px; margin: 12px 15px 0 0; text-align: left; }
 			
 		
