--- a/css/docs.css
+++ b/css/docs.css
@@ -265,8 +265,8 @@ body {
 			/* Ad Block 
 			=================================================== */
 				.bsarocks{display:block;}
-				
-				body .bsarocks .one .bsa_it_ad { background: transparent; border: none; font-family: inherit; width:100%!important; float:left; padding: 0 15px 0 0px; margin: 0; text-align: left; }
+				body .bsarocks .one {width:100%!important;}
+				body .bsarocks .one .bsa_it_ad { background: transparent; border: none; font-family: inherit; width:100%; float:left; padding: 0 15px 0 0px; margin: 0; text-align: left; }
 				body .bsarocks .one .bsa_it_ad:hover img { -moz-box-shadow: 0 0 3px #000; -webkit-box-shadow: 0 0 3px #000; box-shadow: 0 0 3px #000; }
 				body .bsarocks .one .bsa_it_ad .bsa_it_i { display: block; padding: 0; float: none; margin: 0 0 5px; }
 				body .bsarocks .one .bsa_it_ad .bsa_it_i img { padding: 0; border: none; }
