--- a/css/docs.css
+++ b/css/docs.css
@@ -125,8 +125,8 @@ body {
 	.hidden-code>div {
 		display: none; }
 		
-		.bsarocks, #bsap_aplink {
-			display:none;
+		.bsarocks, #bsap_aplink, .bsap {
+		display:none;
 		}
 
 
@@ -230,11 +230,11 @@ body {
 	@media only screen and (min-width: 40em) {
 	  /* 640 =================================================== */
 	.container {
-		padding-top: 60px; }
+		padding-top: 40px; }
 		
 		.sidebar {
 			position: fixed;
-			width: 20%;
+			width: 17%;
 			float:left;
 			overflow:hidden }
 			
@@ -246,7 +246,7 @@ body {
 			}
 			
 				nav {
-					float:right;
+					float:none;
 					width: 100%;
 					margin-top: 10px; }
 			
@@ -255,7 +255,7 @@ body {
 		}
 		nav ul {
 			display:block;
-			margin-bottom: 10px;
+			margin-bottom: 30px;
 		}
 		#logo {
 			float:right;
@@ -264,15 +264,15 @@ body {
 			
 			/* Ad Block 
 			=================================================== */
-				.bsarocks{display:block;}
-				body .bsarocks .one {width:100%!important;}
-				body .bsarocks .one .bsa_it_ad { background: transparent; border: none; font-family: inherit; width:100%; float:left; padding: 0 15px 0 0px; margin: 0; text-align: left; }
-				body .bsarocks .one .bsa_it_ad:hover img { -moz-box-shadow: 0 0 3px #000; -webkit-box-shadow: 0 0 3px #000; box-shadow: 0 0 3px #000; }
-				body .bsarocks .one .bsa_it_ad .bsa_it_i { display: block; padding: 0; float: none; margin: 0 0 5px; }
-				body .bsarocks .one .bsa_it_ad .bsa_it_i img { padding: 0; border: none; }
-				body .bsarocks .one .bsa_it_ad .bsa_it_t { padding: 6px 0; }
-				body .bsarocks .one .bsa_it_ad .bsa_it_d { padding: 0; font-size: 12px; color: #333; }
-				body .bsarocks .one .bsa_it_p { display: none; }
+				.bsarocks, .bsap{display:block;}
+				body .bsap .one {width:100%;}
+				body .bsap .one .bsa_it_ad { background: transparent; border: none; font-family: inherit; width:100%; float:left; padding: 0 15px 0 0px; margin: 0; text-align: left; }
+				body .bsap .one .bsa_it_ad:hover img { -moz-box-shadow: 0 0 3px #000; -webkit-box-shadow: 0 0 3px #000; box-shadow: 0 0 3px #000; }
+				body .bsap .one .bsa_it_ad .bsa_it_i { display: block; padding: 0; float: none; margin: 0 0 5px; }
+				body .bsap .one .bsa_it_ad .bsa_it_i img { padding: 0; border: none; }
+				body .bsap .one .bsa_it_ad .bsa_it_t { padding: 6px 0; }
+				body .bsap .one .bsa_it_ad .bsa_it_d { padding: 0; font-size: 12px; color: #333; }
+				body .bsap .one .bsa_it_p { display: none; }
 				body #bsap_aplink, body #bsap_aplink:hover { display: block; font-size: 10px; margin: 12px 15px 0 0; text-align: left; }
 			
 		
