--- a/css/docs.css
+++ b/css/docs.css
@@ -239,7 +239,7 @@ body {
 		
 		.sidebar {
 			position: fixed;
-			width: 17%;
+			width: 18%;
 			float:left;
 			overflow:hidden }
 			
@@ -261,7 +261,7 @@ body {
 		}
 		nav ul {
 			display:block;
-			margin-bottom: 20px;
+			margin-bottom: 10px;
 		}
 		#logo {
 			float:right;
@@ -274,9 +274,9 @@ body {
 				body .bsap .one {width:100%;}
 				body .bsap .one .bsa_it_ad { background: transparent; border: none; font-family: inherit; width:100%; float:left; padding: 0 15px 0 0px; margin: 0; text-align: left; }
 				body .bsap .one .bsa_it_ad:hover img { -moz-box-shadow: 0 0 3px #000; -webkit-box-shadow: 0 0 3px #000; box-shadow: 0 0 3px #000; }
-				body .bsap .one .bsa_it_ad .bsa_it_i { display: block; padding: 0; float: none; margin: 0 0 5px; }
+				body .bsap .one .bsa_it_ad .bsa_it_i { display: block; padding: 0; float: left; margin: 0 5px 5px 0px; }
 				body .bsap .one .bsa_it_ad .bsa_it_i img { padding: 0; border: none; }
-				body .bsap .one .bsa_it_ad .bsa_it_t { padding: 6px 0; }
+				body .bsap .one .bsa_it_ad .bsa_it_t { padding: 0px 0 6px; }
 				body .bsap .one .bsa_it_ad .bsa_it_d { padding: 0; font-size: 12px; color: #333; }
 				body .bsap .one .bsa_it_p { display: none; }
 				body #bsap_aplink, body #bsap_aplink:hover { display: block; font-size: 10px; margin: 12px 15px 0 0; text-align: left; }
