--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,7 @@
 /* ============================================================
 
 Wirefy by Chris Da Sie
-Version: 1.3
+Version: 1.4.1
 URL: https://github.com/cjdsie/wirefy
 Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 
@@ -37,10 +37,17 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 /* Header 
 --------------------------------------------------*/
 
+header[role="banner"] {
+	width:100%;
+	position:relative;
+	overflow: hidden;
+}
+
+
 .logo {
 	float:left;
 	position:relative;
-	width:auto;
+	width:100%;
 	margin: 0 auto;
 }
 
@@ -55,7 +62,8 @@ nav select {
 }
 
 nav ul {
-	display:none;
+	width:100%;
+	display:block;
 	margin:0;
 	padding:0;
 	list-style:none;
@@ -77,7 +85,7 @@ nav ul li:first-of-type {
 
 	@media only screen and (min-width: 30em) {
 	  /* 480 =================================================== */
-
+	
 	}
 	
 	@media only screen and (min-width: 40em) {
@@ -85,6 +93,7 @@ nav ul li:first-of-type {
 	
 		.logo {
 			float:left;
+			width:auto;
 		}
 		
 		.logo h1 {
@@ -107,17 +116,7 @@ nav ul li:first-of-type {
 	
 	@media only screen and (min-width: 45em) {
 	  /* 720 =================================================== */
-	body {
-	    display: table;
-	    border-collapse: collapse;
-	  }
-	  [role="banner"] a[href="#navigation"] {
-	    display: none !important;
-	    visibility: hidden;
-	  }
-	  [role="navigation"] {
-	    display: table-header-group;
-	  }
+	
 	  [role="navigation"] p {
 	    margin: 0 auto;
 	    width: 90%;
