Menu and Modernizr Updates

--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,6 @@
 /* ============================================================
 Wirefy by Chris Da Sie
-Version:1.4
+Version:1.4.4
 URL:https://github.com/cjdsie/wirefy
 Apache License:v2.0. http://www.apache.org/licenses/LICENSE-2.0
 /* Table of Content
@@ -178,13 +178,11 @@ a [class*=" icon-"]{display:inline-block;text-decoration:inherit;}
 /* makes the font 33% larger relative to the icon container */
 .icon-large:before{vertical-align:top;font-size:1.3333333333333333em;}
 .btn [class^="icon-"],
-.btn [class*=" icon-"]{/* keeps button heights with and without icons the same */
-line-height:.9em;}
+.btn [class*=" icon-"]{/* keeps button heights with and without icons the same */line-height:.9em;}
 li [class^="icon-"],
 li [class*=" icon-"]{display:inline-block;width:1.25em;text-align:center;}
 li .icon-large[class^="icon-"],
-li .icon-large[class*=" icon-"]{/* 1.5 increased font size for icon-large * 1.25 width */
-width:1.875em;}
+li .icon-large[class*=" icon-"]{/* 1.5 increased font size for icon-large * 1.25 width */width:1.875em;}
 li[class^="icon-"],
 li[class*=" icon-"]{margin-left:0;list-style-type:none;}
 li[class^="icon-"]:before,
@@ -410,6 +408,27 @@ opacity:0;filter:alpha(opacity=1);width:48%;text-indent:-9999px;overflow:hidden;
 .menu2 a{display:block;padding:.5em .8em;text-decoration:none;color:#333;}
 .menu2 a:hover{background-color:#f8f8f8;}
 .menu2 .nav-current{font-weight:bold;}
+a.skip {position:absolute;left:-999em;}
+[role='navigation']{margin:0 auto;width:100%;background-color:#333;float:right;}
+.flexNav-touch [role='navigation'],
+.flexNav-no-touch [role='navigation']{display:none;}
+.menu-button{float:right;display:block;width:25px;height:25px;padding:1em 0;background:transparent;color:#333;background-image:url('../img/nav-icon.png');background-repeat:no-repeat;background-position:93% 10px;cursor:pointer;}
+[role='navigation']:after{/* clearfix */
+visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0;}
+[role='navigation'] ul{padding:0;}
+[role='navigation'] li{position:relative;list-style:none;display:block;background-color:#333;width:100%;}
+[role='navigation'] li.item-with-ul{background-color:#222;}
+[role='navigation'] li a{/*margin-right:20%;*/
+display:block;color:#ddd;border-bottom:1px solid #111;}
+[role='navigation'] li a.link-with-ul{border-right:1px solid #222;}
+[role='navigation'] .top-level a{position:relative;display:block;background-color:#333;padding:1em;z-index:2;}
+[role='navigation'] li ul{width:100%;}
+[role='navigation'] li ul li{float:none;width:100%;}
+[role='navigation'] li ul li a{display:block;background-color:#333;}
+[role='navigation'] li ul{position:relative;border-top:1px solid #333;border-bottom:1px solid #333;}
+[role='navigation'] .item-with-ul{background-image:url('../images/arrow-down.png');background-repeat:no-repeat;background-position:93% 18px;}
+.sub-menu{display:none;}
+.sub-menu.open{display:block;}
 /* #Breadcrumb
 ================================================== */
 .breadcrumb{padding:7px 14px;margin:0 0 18px;list-style:none;}
@@ -570,16 +589,14 @@ legend span{font-weight:normal;font-size:13px;color:#444;}
 .remove-bottom{margin-bottom:0 !important;}
 .half-bottom{margin-bottom:10px !important;}
 .add-bottom{margin-bottom:20px !important;}
+/* #Media Queries
+================================================== */
+/* @media screen and (min-width:480px) */
+@media screen and (min-width: 30em){
+[role='navigation']{float:left;}
+}
 /* @media screen and (min-width:640px) */
-@media screen and (min-width:40em){/*
-*
-* Sixteen-column grid active
-* ----------------------------------------------------------------------------------------------------------------------
-* Margin | # 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 | Margin
-* 5.55555% | % 6.25 12.5 18.75 25.0 31.25 37.5 43.75 50.0 56.25 62.5 68.75 75.0 81.25 87.5 93.75 100 | 5.55555%
-* 
-*
-*/
+@media screen and (min-width:40em){
 .column,.columns{float:left;margin:0 1.04166667%;/* 5.8823594% = 639.999956 */}
 .row{width:100%;margin-bottom:20px;}
 .alpha{margin-left:0;}
@@ -607,9 +624,23 @@ legend span{font-weight:normal;font-size:13px;color:#444;}
 .menu2 li{float:left;font-size:1.5em;border-bottom:0;}
 }
 /* @media screen and (min-width:720px) */
-@media screen and (min-width:45em){}
+@media screen and (min-width:45em){
+.flexNav-touch [role='navigation'],
+.flexNav-no-touch [role='navigation']{display:block!important;}
+[role='navigation']{float:right;display:block;position:relative;width:auto;background:none;z-index:0;}
+.menu-button{display:none;}
+[role='navigation'] li{position:relative;list-style:none;float:left;display:block;background:none;color:#333;width:20%;padding:0px 0px 0px 20px;margin:0em;text-transform:uppercase;}
+.flexNav-no-touch .item-with-ul:hover > ul{opacity:1;top:3.1em;position:absolute;}
+[role="navigation"] .top-level a{background:none;color:#333;padding:0;}
+[role='navigation'] li a{border-left:none;border-bottom:none;}
+.flexNav-no-touch [role='navigation'] li ul{position:absolute;top:auto;left:0;opacity:0;visibility:hidden;height:1px;z-index:1;}
+[role='navigation'] li ul li a{border-bottom:none;}
+.flexNav-touch [role='navigation'] li ul.sub-menu{position:absolute;top:auto;left:0;display:none;z-index:1;}
+.flexNav-no-touch .item-with-ul:hover > ul{visibility:visible;opacity:1;height:auto;display:block;border-right:1px solid #000;border-bottom:1px solid #000;}
+}
 /* @media screen and (min-width:888px) */
-@media screen and (min-width:55.5em){.menu2{float:right;clear:none;}
+@media screen and (min-width:55.5em){
+.menu2{float:right;clear:none;}
 }
 /* @media screen and (min-width:984px) */
 @media screen and (min-width:61.5em){}
