--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,7 @@
 /* ============================================================
 
 Wirefy by Chris Da Sie
-Version: 1.4.1
+Version: 1.4.4
 URL: https://github.com/cjdsie/wirefy
 Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 
@@ -19,17 +19,18 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 ================================================== */
 
 .container {
-	margin:0 auto;
-	padding:0 auto;
-	max-width: 1200px;
-	width: 80%;
-	padding-top: 20px; }
+margin: 0 auto;
+padding: 0 auto;
+max-width: 1200px;
+width: 80%;
+padding-top: 20px;
+}
 		
-		.content {
-			position:relative;
-			width:100%;
-			overflow:hidden;
-		}
+.content {
+position: relative;
+width: 100%;
+overflow: hidden;
+}
 
 /* #Page Styles
 ================================================== */
@@ -38,44 +39,17 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 --------------------------------------------------*/
 
 header[role="banner"] {
-	width:100%;
-	position:relative;
-	overflow: hidden;
+width: 100%;
+position: relative;
+overflow: hidden;
 }
 
 
 .logo {
-	float:left;
-	position:relative;
-	width:100%;
-	margin: 0 auto;
-}
-
-nav {
-	margin-top: .875em;
-	float:none;
-}
-
-nav select {
-	width:100%;
-	display:block;
-}
-
-nav ul {
-	width:100%;
-	display:none;
-	margin:0;
-	padding:0;
-	list-style:none;
-}
-
-nav ul li {
-	float:left;
-	margin: 0 0 0 3em;
-}
-
-nav ul li:first-of-type {
-	margin-left:0;
+float: left;
+position: relative;
+width: 50%;
+margin: 0 auto;
 }
 
 
@@ -83,67 +57,45 @@ nav ul li:first-of-type {
 /* #Media Queries
 ================================================== */
 
-	@media only screen and (min-width: 30em) {
+@media only screen and (min-width: 30em) {
 	  /* 480 =================================================== */
+}
 	
-	}
-	
-	@media only screen and (min-width: 40em) {
+@media only screen and (min-width: 40em) {
 	  /* 640 =================================================== */
 	
-		.logo {
-			float:left;
-			width:auto;
-		}
+.logo {
+float: left;
+width: auto;
+}
 		
-		.logo h1 {
-			text-align:left;
-		}
-		
-		nav {
-			float:left;
-		}
+.logo h1 {
+text-align: left;
+}
+
+}
 	
-		nav select {
-			display:none;
-		}
-		
-		nav ul {
-			display:block;
-		}
-	
-	}
-	
-	@media only screen and (min-width: 45em) {
+@media only screen and (min-width: 45em) {
 	  /* 720 =================================================== */
+
+}
 	
-	  [role="navigation"] p {
-	    margin: 0 auto;
-	    width: 90%;
-	  }
-		
-		nav {
-			float:right;
-		}
-	
-	}
-	
-	@media screen and (min-width: 55.5em) {
+@media screen and (min-width: 55.5em) {
 		/* 888 =================================================== */
-	}
+}
 	
-	@media only screen and (min-width: 61.5em) {
+@media only screen and (min-width: 61.5em) {
 	  /* 984 =================================================== */
-	}
+}
 	
-	@media only screen and (min-width: 75em) {
+@media only screen and (min-width: 75em) {
 	  /* 1200 =================================================== */
-	}
+}
 	
-	@media only screen and (min-width: 87em) {
+@media only screen and (min-width: 87em) {
 	  /* 1392 =================================================== */
-	}
-	@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
 	  /* 2x =================================================== */
-	}
+}
 	
