--- a/css/base.css
+++ b/css/base.css
@@ -434,6 +434,7 @@ figure figcaption{display:block;font-weight:normal;font-size:14px;font-size:.875
 /*! Modified from http://responsiveslides.com v1.32 by @viljamis */
 .rslides{margin:0 auto;padding:0;}
 .rslides li {margin-bottom:0;}
+.rslides img {width:100%; height:auto;}
 .rslides_container{margin-bottom:1.125em;position:relative;float:left;width:100%;}
 .rslides_container .slides{margin:0;}
 .centered-btns_nav{position:absolute;-webkit-tap-highlight-color:rgba(0,0,0,0);top:50%;left:0;opacity:0.7;text-indent:-9999px;overflow:hidden;text-decoration:none;height:3.8125em;width:2.375em;background:transparent url('../img/themes.gif') no-repeat left top;margin-top:-3.4em;}
