--- a/css/layout.css
+++ b/css/layout.css
@@ -473,7 +473,7 @@ border-radius: 2px;
 /*Footer
 ------------------------------ */
 footer[role="contentinfo"]{
-	margin:2em 0;
+	margin:2em 0 0;
 	background:#101010;
 	width:100%;
 	padding: 2em 0;
